--- a/admin.html
+++ b/admin.html
@@ -3,117 +3,80 @@
   <head>
     <meta charset="UTF-8" />
     <title>Администратор</title>
-    <link rel="stylesheet" href="css/admin.css" />
+    <link rel="stylesheet" href="admin.css" />
   </head>
   <body>
-    <!-- Это окно для ввода админ-пароля -->
-    <div class="container" id="adminLoginContainer">
-      <h2>Вход администратора</h2>
-      <form id="adminLoginForm">
-        <input
-          type="password"
-          id="adminPasswordInput"
-          placeholder="Введите админ-пароль"
-          required
-        />
-        <button type="submit">Войти</button>
-      </form>
-      <div id="adminLoginMessage"></div>
-    </div>
-
-    <!-- Это сама админ-панель (изначально скрыта, появляется только если пароль верный) -->
-    <div class="container hidden" id="adminPanelContainer">
-      <!-- Шапка для переключения продуктов -->
+    <div class="container" id="adminPanelContainer">
       <div id="productsHeader">
         <label for="productSelect">Выберите продукт:</label>
         <select id="productSelect"></select>
+        <button class="add-user-btn" id="addUserBtn">
+          + Добавить пользователя
+        </button>
         <button id="logoutAdminBtn">Выйти</button>
       </div>
 
-      <div class="admin-content">
-        <!-- Левая часть (таблица пользователей) -->
-        <div class="admin-left">
-          <h3>Пользователи выбранного продукта</h3>
-          <table id="usersTable">
-            <thead>
-              <tr>
-                <th>Имя</th>
-                <th>Дата создания</th>
-                <th>Active</th>
-                <th>Действия</th>
-              </tr>
-            </thead>
-            <tbody>
-              <!-- Данные динамически -->
-            </tbody>
-          </table>
+      <div class="table-container">
+        <table id="usersTable">
+          <thead>
+            <tr>
+              <!-- Columns will be dynamically populated -->
+            </tr>
+          </thead>
+          <tbody>
+            <!-- Data will be dynamically populated -->
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+    <!-- Edit Modal -->
+    <div class="modal-overlay" id="editModal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3>Редактирование пользователя</h3>
+          <span class="modal-close" id="modalClose">&times;</span>
         </div>
+        <form id="editUserForm" class="modal-form">
+          <div id="dynamicFieldsContainer"></div>
+          <div class="actions">
+            <button type="button" id="deleteUserBtn">Удалить</button>
+            <button type="submit">Сохранить</button>
+            <button type="button" id="cancelEditBtn">Отмена</button>
+          </div>
+        </form>
+      </div>
+    </div>
 
-        <!-- Правая часть (управление пользователями) -->
-        <div class="admin-right">
-          <h3>Добавить пользователя</h3>
-          <form id="addUserForm">
-            <input
-              type="text"
-              id="newUsername"
-              placeholder="Имя пользователя"
-              required
-            />
-            <input
-              type="password"
-              id="newPassword"
-              placeholder="Пароль"
-              required
-            />
-            <button type="submit">Добавить</button>
-          </form>
-
-          <hr />
-
-          <h3>Редактировать пользователя</h3>
-          <form id="editUserForm">
-            <!-- Поле для ввода username, по которому ищем пользователя -->
-            <input
-              type="text"
-              id="editUsername"
-              placeholder="Имя пользователя"
-              required
-            />
-            <button type="button" id="loadUserBtn">Загрузить данные</button>
-
-            <!-- Ниже скрытая область, где будет как старая логика (закомментирована), так и новая динамическая -->
-            <div id="editFields" class="hidden">
-
-              <!-- *** СТАРАЯ ЛОГИКА (закомментирована) ***
-              <input
-                type="password"
-                id="editPassword"
-                placeholder="Новый пароль (если нужно)"
-              />
-              <label>
-                Дата создания:
-                <input type="date" id="editCreated" readonly />
-              </label>
-              <label>
-                Активен:
-                <input type="checkbox" id="editActive" />
-              </label>
-              *** КОНЕЦ СТАРОЙ ЛОГИКИ *** -->
-
-              <!-- НОВАЯ ЛОГИКА: динамические поля -->
-              <div id="dynamicFieldsContainer"></div>
-
-              <button type="submit">Сохранить</button>
-              <button type="button" id="deleteUserBtn">Удалить</button>
-            </div>
-          </form>
-
-          <div id="adminMessage"></div>
+    <!-- Add User Modal -->
+    <div class="modal-overlay" id="addUserModal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3>Добавить нового пользователя</h3>
+          <span class="modal-close" id="addModalClose">&times;</span>
         </div>
+        <form id="addUserForm" class="modal-form">
+          <div class="form-field">
+            <label>Логин:</label>
+            <input type="text" id="newUsername" required />
+          </div>
+          <div class="form-field">
+            <label>Пароль:</label>
+            <input type="password" id="newPassword" required />
+          </div>
+          <div class="form-field">
+            <label>Активен:</label>
+            <input type="checkbox" id="newActive" checked />
+          </div>
+          <div class="actions">
+            <button type="button" id="cancelAddBtn">Отмена</button>
+            <button type="submit">Создать</button>
+          </div>
+        </form>
       </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="js/admin.js"></script>
+    <script src="admin.js"></script>
   </body>
 </html>
