--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <title>Главная страница</title>
-    <link rel="stylesheet" href="css/index.css" />
+    <title>Главная</title>
+    <link rel="stylesheet" href="admin.css" />
   </head>
   <body>
-    <div class="container" id="productsContainer"></div>
-
-    <script src="js/main.js"></script>
+    <div style="text-align: center; padding: 50px">
+      <button
+        onclick="window.location.href='admin.html'"
+        style="padding: 20px 40px; font-size: 18px"
+      >
+        Перейти в админ-панель
+      </button>
+    </div>
   </body>
 </html>
